--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -31,28 +31,35 @@
                         </nav>
                         <nav class="footer__menu-block d-flex flex-column">
                             <a href="" class="footer__menu-caption">Клиенту</a>
-                            <ul class="footer__menu-list footer__menu-list--large">
+                            <ul class="footer__menu-list d-flex flex-column align-self-start">
                                 <li class="footer__menu-item">
                                     <a href="" class="footer__menu-link" data-title="О компании"><span>О компании</span></a>
-                                </li>
-                                <li class="footer__menu-item">
-                                    <a href="" class="footer__menu-link" data-title="Русское деревянное зодчество"><span>Русское деревянное зодчество</span></a>
                                 </li>
                                 <li class="footer__menu-item">
                                     <a href="" class="footer__menu-link" data-title="Новости"><span>Новости</span></a>
                                 </li>
                                 <li class="footer__menu-item">
-                                    <a href="" class="footer__menu-link" data-title="Технологии строительства"><span>Технологии строительства</span></a>
-                                </li>
-                                <li class="footer__menu-item">
                                     <a href="" class="footer__menu-link" data-title="Способы оплаты"><span>Способы оплаты</span></a>
-                                </li>
-                                <li class="footer__menu-item">
-                                    <a href="" class="footer__menu-link" data-title="Частые вопросы"><span>Частые вопросы</span></a>
                                 </li>
                                 <li class="footer__menu-item">
                                     <a href="" class="footer__menu-link" data-title="Типовые документы"><span>Типовые документы</span></a>
                                 </li>
+                            </ul>
+                        </nav>
+                        <nav class="footer__menu-block d-flex flex-column mt-auto">
+                            <ul class="footer__menu-list d-flex flex-column align-self-start">
+                                <li class="footer__menu-item">
+                                    <a href="" class="footer__menu-link" data-title="Русское деревянное зодчество"><span>Русское деревянное зодчество</span></a>
+                                </li>
+
+                                <li class="footer__menu-item">
+                                    <a href="" class="footer__menu-link" data-title="Технологии строительства"><span>Технологии строительства</span></a>
+                                </li>
+
+                                <li class="footer__menu-item">
+                                    <a href="" class="footer__menu-link" data-title="Частые вопросы"><span>Частые вопросы</span></a>
+                                </li>
+
                                 <li class="footer__menu-item">
                                     <a href="" class="footer__menu-link" data-title="Контакты"><span>Контакты</span></a>
                                 </li>
